# spring-cloud-dataflow-python

./: LICENSE  README.md  foo.tx
.github/workflows/: docker.yml
debug-task/: .dockerignore  Dockerfile  build.sh  entrypoint.py  pyproject.toml
demo/: docker-compose.yml
demo/postgres/init-scripts/: create-task-execution.sh
task/: .dockerignore  Dockerfile  README.md  build.sh  pyproject.toml  task.py
task/spring/: spring_cloud_task_status.py
task/task/: entrypoint.py
