[tool.poetry]
name = "spring-cloud-dataflow-python-task"
version = "0"
description = "description"
authors = ["author"]

[tool.poetry.dependencies]
py-spring-dataflow = "0.5"
python = "3.11"
sqlalchemy = "2.0.9"
mysqlclient = "2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
