[tool.poetry]
name = "spring-cloud-dataflow-python-task"
version = "0"
description = "description"
authors = ["author"]

[tool.poetry.dependencies]
python = "^3.11"
py-spring-dataflow = "^0.5"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
